# DreamTrip

./: LICENSE  README.md
app/src/app/: crew.py  main.py
backend/: app.py  flask_app.py
backend/app/: pyproject.toml
backend/app/src/app/: crew.py  main.py
backend/app/src/app/config/: agents.yaml  tasks.yaml
backend/app/src/app/tools/: browser_tool.py  search_tool.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Header.tsx  ItineraryCard.tsx  ItineraryResults.tsx  LoadingIndicator.tsx  TravelForm.tsx
frontend/src/services/: api.ts
