[project]
name = "app"
version = "0.1.0"
description = "AI-powered travel planner that creates personalized itineraries and optimizes your trips effortlessly."
authors = [{ name = "Maciej Małachowski", email = "maciejmalachowski1@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
app = "app.main:run"
run_crew = "app.main:run"
train = "app.main:train"
replay = "app.main:replay"
test = "app.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
